--- a/my-app/02-deployment.yaml
+++ b/my-app/02-deployment.yaml
@@ -18,5 +18,5 @@ spec:
       containers:
         - name: nginx
           image: arielimlauer/nginx:v0.1.0
-          ports: 80
+          ports: 
             - containerPort: 80
